# pyx2ctune

./: .gitignore  LICENSE  README.md  SPEC.md  THIRD-PARTY-LICENSES.md  mctoolbox.spec  pyproject.toml  pyx2ctune.spec
.cursor/rules/: no-motorbench-changes.mdc  project-spec.mdc  python-venv.mdc
.github/workflows/: build.yml  docs.yml
.specstory/: .project.json  statistics.json
.specstory/history/: 2026-03-13_16-05-32Z-gui-tuning-tool-for-microchip-motorbench.md  2026-03-19_20-07-54Z-project-directory-exploration-for-pyx2ctune.md  2026-03-19_20-08-30Z-x2cscope-integration-and-tuning-parameters.md  2026-03-19_20-48-39Z-pyx2cscope-variable-discovery-and-resolution.md  2026-03-19_22-59-30Z-pyserial-installation-and-serial-port-enumeration.md  2026-03-20_01-53-44Z-test-harness-documentation-review.md  2026-03-20_13-07-21Z-firmware-variable-paths-for-velocity-control.md  2026-03-20_13-07-27Z-file-structure-examination-for-pyx2ctune.md  2026-03-20_14-38-52Z-refactoring-pyx2ctune-gui-for-scope-panel.md  2026-03-20_20-58-44Z-content-licensing-review-and-documentation.md  2026-03-20_20-59-10Z-project-structure-and-licensing-details.md  2026-03-21_02-33-35Z-linux-build-separation-on-github.md  2026-03-21_13-18-17Z-disabling-controls-without-connection.md  2026-03-21_13-19-11Z-pyx2ctune-project-exploration.md  2026-03-21_18-14-06Z-user-guidance-wizard-design.md  2026-03-21_18-16-40Z-codebase-exploration-details.md  2026-03-21_18-16-44Z-workflow-and-state-machine-search.md  2026-03-21_19-34-59Z-dependency-graph-audit-for-library-and-gui-code.md  2026-03-21_20-06-02Z-occurrences-of-pyx2ctune-in-codebase.md  2026-03-21_20-39-57Z-mcaf-library-refactoring.md  2026-03-21_22-22-39Z-connection-loss-error-popups.md  (+8 more)
examples/: current_loop_tune.py  gain_sweep.py
mctoolbox/: __init__.py  analysis.py  capture.py  interfaces.py  plotting.py  wizard_schema.py
notebooks/: current_loop_tuning.ipynb
pymcaf/: __init__.py  backend.py  connection.py  constants.py  scope.py  test_harness.py  types.py
pyx2ctune/: __init__.py  analysis.py  capture.py  connection.py  current_tuning.py  parameters.py  plotting.py  test_harness.py  velocity_tuning.py
(+203 files in other folders)
